# samvid-trading-core

./: .clangd  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .mission.json  .pre-commit-config.yaml  .trading.md  0.14.0  0.2.54  0.3.0  0.49.0  0.80.0  0.9.0  0.9.86  1.13.0  1.2.2  1.26.0  1.5.0  1.68.0  13.0  2.1.0  2.2.0  2.4.20  2.8.0  2024.1  21.0  24.4.0  3.10.0  5.0.4522  9.0.0  AGENTS.md  ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_SOVEREIGN_BUG_LIST.md.bak  (+90 more)
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  pull_request_template.md
android/: HeartbeatService.kt
contracts/: apex_archive.sol  insurance.sol  ledger.sol  profit_audit.circom  profit_audit.sol
data/: schema.sql
docs/: AUDIT_REPORT_2026_05_11.md  FIX_PLAN_2026_05_11.md  SOVEREIGN_ULTIMATE_CHECKLIST.md  _config.yml  architecture.md  conf.py  github_seo_guide.md  hardware_spec.md  index.md  ops_guide.md  physical_sec.md  profile_showcase.md  vault_specs.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
hardware/: firewall.v  memristor_inf.c  normalizer.v  panic_button.c  photonic_gate.c
ios/: Auth.swift  SecureBridge.swift  SovereignHeart.swift
migrations/: 0001.create-core-schema.rollback.sql  0001.create-core-schema.sql  0002.add-performance-summary-kv-cols.rollback.sql  0002.add-performance-summary-kv-cols.sql  0003.add-trades-regime-at-entry.rollback.sql  0003.add-trades-regime-at-entry.sql
outputs/: generate_audit_pdf.py  task_registry.json
quarantine/: io_repair.c  lattice.rs  panic_button.c  q_safe.rs  rng_audit.cpp  rumor_agent.py  thermal_awareness.py  time_sync.c  vision_agent.py  vocal_audit.py  voice_agent.py  voice_interface.py  weather_agent.py  zkp.rs
scratch/: analyze_stress_data.py  analyze_stress_data_v2.py  analyze_today.py  arm_ibkr.py  atlas_implementation_evidence.py  check_circular.py  check_current_regimes.py  check_data.py  check_db.py  check_db_schema.py  check_db_signs.py  check_keys.py  check_local_data.py  check_local_data_v2.py  check_local_data_v3.py  check_news_keys.py  check_obb.py  check_schema.py  check_status.py  check_stress_cols.py  check_vault.py  check_ws.py  create_index.py  daily_audit.py  db_check.py  deep_data_search.py  diag_ruff.json  diag_ruff_final.json  diag_ruff_v2.json  diag_ruff_v3.json  diag_ruff_v4.json  diag_ruff_v5.json  emergency_liquidate.py  emergency_purge.py  full_atoz_audit.py  full_audit.py  gap44_stress_test.py  gaps_scan.csv  gen_500.py  generate_full_history.py  (+56 more)
scripts/: active_hours_soak.py  advanced_setup.py  backup_state.sh  build_kernel.sh  build_native.py  build_optimized.py  chroma_11b_vector_forge.py  chroma_real_world_forge.py  cleanup_secrets.py  cockpit.py  detect_cycles.py  distill_model.py  do_commit.py  do_push.py  do_push_branch.py  edge_decay_watch.py  execution_audit_report.py  fetch_100y_data.py  fetch_75y_proxy.py  fix_dashboard.py  fix_mojibake.py  follow_live_logs.ps1  follow_logs.bat  hardcore_75y_hyper_fidelity_trainer.py  hardcore_adversarial_trainer.py  hardcore_deep_micro_trainer.py  ibkr_diag.py  live_audit_loop.py  local_llm_agent_trainer.py  memory_sync.py  offline_execution_replay.py  paper_performance_report.py  patch_regime.py  pest_control_visual.py  pin_cores.sh  preflight.py  promotion_readiness_report.py  reconcile_execution_ledger.py  regime_replay_report.py  request_shutdown.py  (+18 more)
specs/: protocol.tla  sovereign.tla
src/: ERROR_T06_Agen.txt  __init__.py  adaptive_learning.py  agent_a.py  agent_a_simd.cpp  agent_b.py  agent_c.py  agent_c_ibkr.py  agent_c_mt5.py  agent_d.py  agent_e.py  agent_h_skeptic.py  agri_agent.py  alpha_watchdog.py  alt_data.py  apex_archive.py  apex_overlay.py  apex_singularity.py  api_cache.py  api_server.py  arbitrage.rs  async_utils.py  attention_engine.py  audit_agent.py  auth_agent.py  auto_coder.py  backend_reliability_probe.py  backtest_engine.py  backtest_validator.py  backtester.py  bayesian_oracle.py  brain.py  brain_accounting.py  brain_data.py  brain_execution.py  brain_fsm.py  brain_health.py  brain_position.py  brain_reconcile.py  brain_state.py  (+247 more)
tests/: bulk_inject_500k.py  conftest.py  generate_giga_report.py  generate_trading_report.py  inspect_dbs.py  live_sim_dynamic.py  simulate_memory_trade.py  stress_test_5000.py  stress_test_500k.py  test_active_hours_soak.py  test_adaptive_learning.py  test_advisory_wiring.py  test_agent_a_patterns.py  test_agent_c_v8.py  test_api_health.py  test_archive_and_sim.py  test_archive_auth_modules.py  test_audio_dubber.py  test_auto_coder.py  test_auxiliary_agents.py  test_backend_reliability_probe.py  test_backtest_engine.py  test_backtest_integration.py  test_backtest_validator.py  test_backtester.py  test_behavioral_logic.py  test_best_day_rule.py  test_black_swan_wiring.py  test_brain_data.py  test_brain_execution_position.py  test_brain_health_logging.py  test_brain_macro_impact.py  test_brain_mixins.py  test_brain_tick_cache.py  test_broker_mock_integration.py  test_build_native.py  test_cache_and_async.py  test_chaos_agent.py  test_config_questdb.py  test_confluence_engine.py  (+84 more)
tmp/: audit_past_2days.py  audit_script.py  calc_pnl.py  check_architect.py  check_db.py  check_db2.py  check_db3.py  check_db_v2.py  check_ibkr.py  check_learning.py  check_positions.py  check_stale.py  check_staleness.py  check_ts.py  clarity_patch.py  cleaned_main_connect.py  coin_analysis.py  db_check.py  db_refs.txt  debug_stale.py  deep_audit.py  diagnose_staleness.py  diagnostic_ib.py  dump.py  error_summary.txt  export_history.py  final_output_check.py  find_db.py  fix_final.py  flatten_ibkr.py  gen_chart_pdf.py  gen_manual_pdf.py  generate_pnl_graph.py  genuine_audit.py  genuine_output.py  genuine_performance.py  get_pnl_data.py  ibkr_diag.py  inspect_db.py  inspect_schema.py  (+36 more)
tools/: deep_bug_check.py  fix_bugs.py  fix_merges.py  merge_logic.py  recover_logic.py
vr/: ReadyRoom.cs  ReadyRoom.unity  (+1 more)
(+318 files in other folders)
