[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samvid-trading-core"
version = "1.0.0"
description = "Sovereign Agentic Trading Mesh"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncio",
    "pandas",
    "polars",
    "numpy",
    "yfinance",
    "httpx",
    "python-dotenv",
    "ib-insync",
    "MetaTrader5; sys_platform == 'win32'",
    "keyring",
    "ruff",
    "mypy",
    "pytest"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv", "data", "logs", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = [
    "E501", # Line length (already ignored)
    "E722", # Bare except (common in research code)
    "E701", # Multiple statements on one line
    "B017", # Asserting blind exceptions (used in tests)
    "F401", # Unused imports (sometimes intentional for re-exports)
    "E402", # Module level import not at top (common in research)
    "F841", # Local variable is assigned to but never used,
        "E702", # Multiple statements on one line (semicolon)
            "B023", # Function definition does not bind loop variable
                "B007", # Loop control variable not used
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
files = "src"
exclude = "(venv|\\.venv|data|logs|outputs)"
