[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samvid-trading-core"
version = "1.0.0"
description = "Open-source AI multi-agent algorithmic trading system for Interactive Brokers & MetaTrader 5 with consensus-based execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiohttp",
    "pandas",
    "polars",
    "numpy",
    "yfinance",
    "httpx",
    "python-dotenv",
    "ib-insync",
    "MetaTrader5; sys_platform == 'win32'",
    "keyring",
    "cryptography",
    "psutil",
    "pytz",
    "zstandard",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio"
]
keywords = [
    "algorithmic-trading",
    "trading-bot",
    "interactive-brokers",
    "metatrader5",
    "quantitative-finance",
    "automated-trading",
    "ai-agents",
    "multi-agent-system",
    "fastapi",
    "risk-management",
    "stock-trading",
    "forex-trading",
    "real-time-market-data",
    "python-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/AshishTalpada/samvid-trading-core"
Repository = "https://github.com/AshishTalpada/samvid-trading-core"
"Bug Tracker" = "https://github.com/AshishTalpada/samvid-trading-core/issues"
Documentation = "https://github.com/AshishTalpada/samvid-trading-core#readme"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers --disable-warnings"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "venv",
    ".venv",
    "data",
    "logs",
    "outputs",
    "tools/backup_before_merge",
    "tools/recovery_report",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = [
    "E501", # Line length
    "E701", # Multiple statements on one line (colon)
    "E702", # Multiple statements on one line (semicolon)
    "B017", # Asserting blind exceptions
    "F401", # Unused imports (legitimate in __init__.py re-exports)
    "E402", # Module level import not at top (dynamic imports required in some paths)
    "B023", # Function definition does not bind loop variable
    "B007", # Loop control variable not used
    "B904", # Exception chaining
    "E741", # Ambiguous variable name (used for 'l' in OHLCV)
    # E722 (bare except) and F841 (unused variable) removed from ignore list
    # -- both are now fully fixed across the codebase.
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
files = "src"
exclude = "(venv|\\.venv|data|logs|outputs)"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
