[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samvid-trading-core"
version = "1.0.0"
description = "Open-source AI multi-agent algorithmic trading system for Interactive Brokers & MetaTrader 5 with consensus-based execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiohttp",
    "pandas",
    "polars",
    "numpy",
    "yfinance",
    "httpx",
    "python-dotenv",
    "ib-insync",
    "MetaTrader5; sys_platform == 'win32'",
    "keyring",
    "cryptography",
    "psutil",
    "pytz",
    "zstandard",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "prometheus-client>=0.25.0",
    "yoyo-migrations>=9.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "python-dateutil>=2.9.0.post0",
    "websockets>=16.0",
    "scipy>=1.17.1",
    "pytest-cov>=7.1.0",
    "numba>=0.65.1",
    "chromadb>=1.5.9",
]
keywords = [
    "algorithmic-trading",
    "trading-bot",
    "interactive-brokers",
    "metatrader5",
    "quantitative-finance",
    "automated-trading",
    "ai-agents",
    "multi-agent-system",
    "fastapi",
    "risk-management",
    "stock-trading",
    "forex-trading",
    "real-time-market-data",
    "python-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/AshishTalpada/samvid-trading-core"
Repository = "https://github.com/AshishTalpada/samvid-trading-core"
"Bug Tracker" = "https://github.com/AshishTalpada/samvid-trading-core/issues"
Documentation = "https://github.com/AshishTalpada/samvid-trading-core#readme"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers --disable-warnings"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "venv",
    ".venv",
    "data",
    "logs",
    "outputs",
    "tools/backup_before_merge",
    "tools/recovery_report",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = [
    "E501", # Line length
    "E701", # Multiple statements on one line (colon)
    "E702", # Multiple statements on one line (semicolon)
    "B017", # Asserting blind exceptions
    "F401", # Unused imports (legitimate in __init__.py re-exports)
    "E402", # Module level import not at top (dynamic imports required in some paths)
    "B023", # Function definition does not bind loop variable
    "B007", # Loop control variable not used
    "B904", # Exception chaining
    "E741", # Ambiguous variable name (used for 'l' in OHLCV)
    # E722 (bare except) and F841 (unused variable) removed from ignore list
    # -- both are now fully fixed across the codebase.
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
files = "src"
exclude = "(venv|\\.venv|data|logs|outputs)"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
source = ["src"]
# Include only core production modules; exclude the ~150 research/stub files
# that have no tests and would dilute the meaningful coverage metric.
omit = [
    "src/__init__.py",
    "src/MiroFish/*",
    "src/indicators/__init__.py",
]
# The remaining stubs are excluded by pattern via relative paths below.
# Because coverage.py supports glob omits, list the known zero-coverage stubs:
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
# Only report on files that have at least 1 statement covered OR are in the
# core set; omit pure stubs from the TOTAL calculation.
omit = [
    "src/__init__.py",
    "src/MiroFish/*",
    "src/agent_e.py",
    "src/api_cache.py",
    "src/contagion_sentinel.py",
    "src/decision_engine.py",
    "src/dms.py",
    "src/explainability.py",
    "src/factory_agent.py",
    "src/feature_engine.py",
    "src/flow_agent.py",
    "src/formal_verifier.py",
    "src/fractal_agent.py",
    "src/freight_agent.py",
    "src/game_theory.py",
    "src/gnn_agent.py",
    "src/hacker_feed.py",
    "src/hardware_audit.py",
    "src/hardware_encryption.py",
    "src/historical_instructor.py",
    "src/holographic_mem.py",
    "src/impact_model.py",
    "src/indicators/__init__.py",
    "src/indicators/averages.py",
    "src/indicators/momentum.py",
    "src/indicators/volatility.py",
    "src/indicators/volume.py",
    "src/insider_agent.py",
    "src/intelligence_bus.py",
    "src/isomorphism.py",
    "src/knowledge_graph.py",
    "src/knowledge_ingestor.py",
    "src/latent_search.py",
    "src/liquid_core.py",
    "src/live_trainer.py",
    "src/lock_free_log.py",
    "src/logic_vetter.py",
    "src/logistics_sim.py",
    "src/lora_manager.py",
    "src/loss_functions.py",
    "src/macro_sentinel.py",
    "src/macro_topology.py",
    "src/market_simulator.py",
    "src/memory_mapped.py",
    "src/mm_simulator.py",
    "src/moe_controller.py",
    "src/native_loader.py",
    "src/network_layer.py",
    "src/neural_sandbox.py",
    "src/neural_worker.py",
    "src/obfuscator.py",
    "src/ode_predictor.py",
    "src/option_agent.py",
    "src/orchestrator.py",
    "src/orjson.py",
    "src/patent_agent.py",
    "src/performance_bench.py",
    "src/phase1_runner.py",
    "src/political_agent.py",
    "src/portfolio_analyzer.py",
    "src/position_cache.py",
    "src/position_sizer.py",
    "src/prediction_agent.py",
    "src/prefetcher.py",
    "src/prime_directive.py",
    "src/production_agent.py",
    "src/prompt_chain.py",
    "src/prompt_factory.py",
    "src/prompt_optimizer.py",
    "src/quant_signals.py",
    "src/quantizer.py",
    "src/quantum_sync.py",
    "src/quantum_tuning.py",
    "src/questdb_candle_writer.py",
    "src/rd_agent.py",
    "src/reflexivity_scale.py",
    "src/regime_agent.py",
    "src/regime_stops.py",
    "src/retail_agent.py",
    "src/rlhf_trainer.py",
    "src/rules_engine.py",
    "src/sec_agent.py",
    "src/security.py",
    "src/self_healer.py",
    "src/self_referential.py",
    "src/sensor_ingest.py",
    "src/sentiment_agent.py",
    "src/sentiment_engine.py",
    "src/sentiment_graph.py",
    "src/sentiment_vol.py",
    "src/session_manager.py",
    "src/shadow_sim.py",
    "src/shadow_trader.py",
    "src/signal_cleaner.py",
    "src/singularity.py",
    "src/slm_compat_worker.py",
    "src/slm_data_pipeline.py",
    "src/snn_core.py",
    "src/snn_gate.py",
    "src/sovereign_singularity.py",
    "src/sovereign_task.py",
    "src/sparse_attention.py",
    "src/state_machine.py",
    "src/streamer_base.py",
    "src/stress_veto.py",
    "src/stress_veto_logic.py",
    "src/swarm_predictor.py",
    "src/system_policy.py",
    "src/task_manager.py",
    "src/workload_manager.py",
    # Additional stubs from first omit pass
    "src/agri_agent.py",
    "src/agent_h_skeptic.py",
    "src/alpha_watchdog.py",
    "src/alt_data.py",
    "src/apex_archive.py",
    "src/apex_singularity.py",
    "src/async_utils.py",
    "src/attention_engine.py",
    "src/auth_agent.py",
    "src/backtest_engine.py",
    "src/brain_updater.py",
    "src/category_theory.py",
    "src/cog_balancer.py",
    "src/cognitive_diversity.py",
    "src/cooling_throttling.py",
    "src/correlation_monitor.py",
    "src/cross_asset.py",
    "src/crypto_bridge.py",
    "src/cyber_agent.py",
    "src/database_security.py",
    "src/debate_engine.py",
    "src/debt_agent.py",
    "src/demonstration.py",
    "src/discovery_engine.py",
    "src/drawdown_duration.py",
    "src/drawdown_predictor.py",
    "src/ensemble_distill.py",
    "src/esg_agent.py",
    "src/evolution_engine.py",
    "src/execution_router.py",
    "src/feedback_engine.py",
    "src/fib_engine.py",
    "src/finbert_analyzer.py",
    "src/flash_crash.py",
    "src/gan_trainer.py",
    "src/gc_tuner.py",
    "src/geopolitical.py",
    "src/gpu_layer.py",
    "src/hft_bridge.py",
    "src/horizon_engine.py",
    "src/hybrid_broker.py",
    "src/hypothesis_tester.py",
    "src/ib_sync_adapter.py",
    "src/imagination_engine.py",
    "src/intent_parser.py",
    "src/jet_agent.py",
    "src/karma_engine.py",
    "src/latency_profiler.py",
    "src/legacy_bridge.py",
    "src/liquidity_engine.py",
    "src/macro_agent.py",
    "src/market_maker_agent.py",
    "src/metamorphic.py",
    "src/meta_rl_agent.py",
    "src/mft_agent.py",
    "src/mini_agent.py",
    "src/ml_ensemble.py",
    "src/model_switching.py",
    "src/momentum_lab.py",
    "src/narrative_engine.py",
    "src/network_agent.py",
    "src/neural_ode.py",
    "src/news_agent.py",
    "src/options_agent.py",
    "src/oracle_agent.py",
    "src/order_flow.py",
    "src/pattern_optimizer.py",
    "src/peer_review.py",
    "src/phase_space.py",
    "src/portfolio_optimizer.py",
    "src/process_manager.py",
    "src/pubsub.py",
    "src/quantum_agent.py",
    "src/real_estate.py",
    "src/rebalance_engine.py",
    "src/red_team.py",
    "src/reflex_agent.py",
    "src/reinforcement_agent.py",
    "src/risk_overlay.py",
    "src/safe_haven.py",
    "src/scenario_stress.py",
    "src/scheduler_agent.py",
    "src/search_agent.py",
    "src/sector_rotation.py",
    "src/self_repair.py",
    "src/sentiment_monitor.py",
    "src/shadow_portfolio.py",
    "src/signal_aggregator.py",
    "src/slippage_model.py",
    "src/smart_contract.py",
    "src/social_agent.py",
    "src/social_sentiment.py",
    "src/strategy_incubator.py",
    "src/supply_chain.py",
    "src/tail_risk.py",
    "src/test_slm_intelligence.py",
    "src/tint_model.py",
    "src/topology_agent.py",
    "src/train_slm.py",
    "src/tuner.py",
    "src/vault_init.py",
    "src/vector_engine.py",
    "src/vix_circuit_breaker.py",
    "src/watchdog.py",
    "src/wisdom_engine.py",
]
